build before releasing

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/giacomorebonato/fastify-vite-plugin.git"
+  },
+  "hooks": {
+    "before:init": ["pnpm build"]
   }
 }
