--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Integrate Vite SPA into a Fastify application",
   "main": "dist/vite-plugin.js",
   "scripts": {
-    "build": "del tsconfig.tsbuildinfo && del dist && tsc",
+    "build": "del 'tsconfig.tsbuildinfo' 'dist' && tsc",
     "release": "release-it --'hooks.before:init=pnpm build'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -41,5 +41,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/giacomorebonato/fastify-vite-plugin.git"
+  },
+  "hooks": {
+    "before:init": "pnpm build"
   }
 }
