--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,5 +9,18 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm ci
+      - name: Initialize Git user
+        run: |
+          git config --global user.email "grebonato@outlook.ie"
+          git config --global user.name "Release Workflow"
+      - name: Initialize the NPM config
+        run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Run release
+        run: npm run release --ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: End message
         run: echo 'Completed!'
