--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm ci
+        run: pnpm ci
       - name: Initialize Git user
         run: |
           git config --global user.email "grebonato@outlook.ie"
