--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
       - name: Install pnpm
-        uses: npm install pnpm --global
+        run: npm install pnpm --global
       - name: Install dependencies
         run: pnpm ci
       - name: Initialize Git user
