--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,7 +13,9 @@ jobs:
       uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
+    - name: Install pnpm
+      run: npm install pnpm --global
     - name: Install dependencies
       run: pnpm install
     - name: Install Playwright Browsers
