--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,6 +18,8 @@ jobs:
       run: npm install pnpm --global
     - name: Install dependencies
       run: pnpm install
+    - name: Build project
+      run: pnpm build
     - name: Install Playwright Browsers
       run: pnpm exec playwright install --with-deps
     - name: Run Playwright tests
