--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Integrate Vite SPA into a Fastify application",
   "main": "dist/vite-plugin.js",
   "scripts": {
-    "test": "npx playwright test tests/example.spec.ts",
+    "test": "npx playwright test",
     "test:server": "node ./examples/server.js",
     "build": "del 'tsconfig.tsbuildinfo' 'dist' && tsc",
     "release": "release-it --'hooks.before:init=pnpm build'"
