--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "del-cli": "^5.0.0",
     "prettier-plugin-packagejson": "^2.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "release-it": "^15.11.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9"
