--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "strict": true,                                      /* Enable all strict type-checking options. */    
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["playwright.config.ts", "tests/"]
+  "exclude": ["playwright.config.ts", "tests/", "vite.config.ts"]
 }
