--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "app-root-path": "^3.1.0"
+    "app-root-path": "^3.1.0",
+    "radash": "^11.0.0"
   },
   "packageManager": "pnpm@8.6.5",
   "repository": {
