--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "release-it": "^15.11.0",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-ssr": "^0.4.135"
   },
   "peerDependencies": {
     "@fastify/express": "^2.3.0",
